# ros-cubeeye-scube

./: CMakeLists.txt  LICENSE  README.md  env_scube.sh  install.sh  package.xml
cfg/: scube_depth.cfg
conf/: MDC200DG
conf/MDC200DW/: OPT9221.dml  TintinCDKCamera.conf
conf/MDC200SP/v3019/: LinearCorrectVGANear.ini  ParamVGA.ini  SensorType.ini
conf/MDC200SP/v3019/IsaTgCode/VGAv3/ADDI9033/: 1_AFEstartup_silicon.lf  5_MN34906BL_ADDI9033_HPT_data.lf
conf/MDC200SP/v3019/IsaTgCode/VGAv3/ADDI9033-gui/: 5_MN34906BL_ADDI9033_HPT_data.lf  6_MN34906BL_ADDI9033_data.lf
conf/MDC200SP/v3019/IsaTgCode/VGAv3/Mode0_Near/: 14_EFLAG_RAW.lf
conf/MDC200SP/v3037/: LinearCorrectVGANear.ini  MultiRange.ini  ParamVGA.ini  SensorType.ini
conf/MDC200SP/v3037/IsaTgCode/SXGA/Mode0_Near/: 10_Driver_enable.lf  12_TGstartup_ADILD.lf  4_DF_settings.lf  5_MN34920BL_ADDI9030.lf
conf/MDC200SP/v3037/IsaTgCode/SXGA/Mode1_Mid/: 12_TGstartup_ADILD.lf  1_AFEstartup_silicon.lf  6_MN34920BL_ADDI9030_data.lf
conf/MDC200SP/v3037/IsaTgCode/SXGA/Mode2_Far/: 11_XV_mux.lf  12_TGstartup_ADILD.lf  2_HPTstartup_ADILD_FCSUBDR.lf  7_MN34920BL_ADDI9030_HPT_data.lf  8_LoopNumAddrList.lf
conf/MDC200SP/v3037/IsaTgCode/SXGA/Mode3_Xfar/: 9_RepeatNumAddrList.lf
launch/: depth_camera.launch
src/: scubeNode.cpp
src/include/CubeEye/: CubeEye.h  CubeEyeBasicFrame.h  CubeEyeCamera.h  CubeEyeData.h  CubeEyeFrame.h  CubeEyeFrameList.h  CubeEyeIntensityPointCloudFrame.h  CubeEyePointCloudFrame.h  CubeEyeProperty.h  CubeEyeSink.h  CubeEyeSource.h
udev/: 98-CubeEye.rules
(+177 files in other folders)
